--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "test": "karma start ./test-config/karma.conf.js"
   },
   "dependencies": {
     "@angular/animations": "^4.4.7",
@@ -24,14 +25,17 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.11.0",
+    "@ionic-native/google-analytics": "^4.17.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
-    "cordova-ios": "^4.4.0",
+    "@types/jasmine": "^2.8.12",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-google-analytics": "^1.8.6",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
@@ -39,10 +43,33 @@
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "web-animations-js": "^2.3.1",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
+    "@types/jasmine": "^2.8.9",
+    "@types/node": "^10.11.7",
+    "angular-cli": "^1.0.0-beta.22-1",
+    "angular2-template-loader": "^0.6.2",
+    "codecov": "^3.1.0",
+    "html-loader": "^0.5.5",
+    "jasmine": "^3.2.0",
+    "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-istanbul": "^0.6.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.5",
+    "null-loader": "^0.1.1",
+    "ts-loader": "^5.2.1",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -52,7 +79,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "ios"
